--- a/public/view/partials/footer.ejs
+++ b/public/view/partials/footer.ejs
@@ -103,8 +103,8 @@
     <link rel="modulepreload" href="../../assets/custom-switcher-BayzdO2G.js" />
     <script type="module" src=" ../../assets/custom-switcher-BayzdO2G.js"></script>
     <!-- APP JS-->
-    <link rel="modulepreload" href="../../assets/app-C4M4tSMb.js" />
-    <script type="module" src=" ../../assets/app-C4M4tSMb.js"></script>
+    <!-- <link rel="modulepreload" href="../../assets/app-C4M4tSMb.js" />
+    <script type="module" src=" ../../assets/app-C4M4tSMb.js"></script> -->
 
     <!-- Include jQuery (required for Toastr) -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
