--- a/public/view/m-accolade/edit-accolades.ejs
+++ b/public/view/m-accolade/edit-accolades.ejs
@@ -231,5 +231,6 @@
 </script>
 <!-- <script src="../../assets/js/country.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="../../assets/js/editAccolades.js"></script>
 
 <%- include('../partials/footer') %>
