--- a/public/view/m-transactions/view-transaction.ejs
+++ b/public/view/m-transactions/view-transaction.ejs
@@ -162,9 +162,9 @@
                                     <p>
                                         <span class="fw-medium text-muted fs-12">Payment Status:</span> <span class="payment-status badge"></span>
                                     </p>
-                                    <div class="alert alert-primary2" role="alert">
+                                    <!-- <div class="alert alert-primary2" role="alert">
                                         Please make sure to pay the invoice bill within 120 days.
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
