Export code for regions and chapters

--- a/public/view/m-chapter/edit-chapter.ejs
+++ b/public/view/m-chapter/edit-chapter.ejs
@@ -911,7 +911,7 @@
               </div>
 
               <button type="button" id="updateChapterBtn" class="btn btn-success me-2 mb-2 mb-sm-0">
-                Edit Region
+                Edit Chapter
               </button>
             </div>
           </div>
