--- a/public/view/m-chapter/manage-chapter.ejs
+++ b/public/view/m-chapter/manage-chapter.ejs
@@ -45,9 +45,9 @@
         </i> Inactive Chapter's <br />
        <span> <b>0</b></span> 
       </button>
-              <button class="btn btn-danger btn-wave me-0">
-                <i class="ri-share-forward-line me-1"></i> Export Chapters
-              </button>
+            <a href="http://localhost:5000/api/exportRegions"><button class="btn btn-danger btn-wave me-0">
+              <i class="ri-share-forward-line me-1"></i> Export Chapters
+            </button></a>  
             </div>
           </div>
           <!-- Page Header Close -->
