--- a/public/view/m-region/manage-region.ejs
+++ b/public/view/m-region/manage-region.ejs
@@ -50,9 +50,9 @@
         </i> Inactive Regions <br />
        <span> <b>0</b></span> 
       </button>
-              <button class="btn btn-danger btn-wave me-0">
-                <i class="ri-share-forward-line me-1"></i> Export Chapters
-              </button>
+             <a href="http://localhost:5000/api/exportRegions"><button class="btn btn-danger btn-wave me-0">
+              <i class="ri-share-forward-line me-1"></i> Export Regions
+            </button></a> 
             </div>
           </div>
           <!-- Page Header Close -->
