--- a/public/view/m-transactions/all-transactions.ejs
+++ b/public/view/m-transactions/all-transactions.ejs
@@ -63,13 +63,21 @@
               >
                 <i class="ri-share-plus me-1"></i> Generate Invoice +
               </button></a>
-              <button
-                class="btn btn-primary btn-wave me-0"
-                style="background-color: #fb3e4e!important; border: #fb3e4e"
-              >
-                <i class="ri-share-forward-line me-1"></i> Export All
-                Transactions
-              </button>
+             <a href="https://bni-data-backend.onrender.com/api/export-orders"><button
+              class="btn btn-primary btn-wave me-0"
+              style="background-color: #fb3e4e!important; border: #fb3e4e"
+            >
+              <i class="ri-share-forward-line me-1"></i> Export All
+              Orders
+            </button></a> 
+
+            <a href="https://bni-data-backend.onrender.com/api/export-transactions"><button
+              class="btn btn-primary btn-wave me-0"
+              style="background-color: #fb3e4e!important; border: #fb3e4e"
+            >
+              <i class="ri-share-forward-line me-1"></i> Export All
+              Transactions
+            </button></a>  
 
           
             </div>
