--- a/public/view/partials/sidebar.ejs
+++ b/public/view/partials/sidebar.ejs
@@ -290,6 +290,41 @@
                                                           </li>
                                                           <!-- End::slide -->
 
+                                                                        <!-- Start::slide -->
+              <li class="slide has-sub">
+                <a href="javascript:void(0);" class="side-menu__item events-menu">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="w-6 h-6 side-menu__icon"
+                    fill="none"
+                    viewbox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M9 6.75V15m6-6v8.25m.503 3.498 4.875-2.437c.381-.19.622-.58.622-1.006V4.82c0-.836-.88-1.38-1.628-1.006l-3.869 1.934c-.317.159-.69.159-1.006 0L9.503 3.252a1.125 1.125 0 0 0-1.006 0L3.622 5.689C3.24 5.88 3 6.27 3 6.695V19.18c0 .836.88 1.38 1.628 1.006l3.869-1.934c.317-.159.69-.159 1.006 0l4.994 2.497c.317.158.69.158 1.006 0Z"
+                    ></path>
+                  </svg>
+                  <span class="side-menu__label">Events <br> Management</span>
+                  <i class="ri-arrow-down-s-line side-menu__angle"></i>
+                </a>
+                <ul class="slide-menu child1">
+                  <li class="slide">
+                    <a href="/e/manage-events" class="side-menu__item"
+                      >View All Events</a
+                    >
+                  </li>
+                  <li class="slide">
+                    <a href="/e/add-event" class="side-menu__item"
+                      >Add New Event</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <!-- End::slide -->
+
                                                            <!-- Start::slide -->
                                                            <li class="slide has-sub">
                                                             <a href="javascript:void(0);" class="side-menu__item classification-menu">
@@ -407,40 +442,7 @@
                                                              
               <!-- End::slide -->
 
-              <!-- Start::slide -->
-              <li class="slide has-sub">
-                <a href="javascript:void(0);" class="side-menu__item e&t-menu">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="w-6 h-6 side-menu__icon"
-                    fill="none"
-                    viewbox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M9 6.75V15m6-6v8.25m.503 3.498 4.875-2.437c.381-.19.622-.58.622-1.006V4.82c0-.836-.88-1.38-1.628-1.006l-3.869 1.934c-.317.159-.69.159-1.006 0L9.503 3.252a1.125 1.125 0 0 0-1.006 0L3.622 5.689C3.24 5.88 3 6.27 3 6.695V19.18c0 .836.88 1.38 1.628 1.006l3.869-1.934c.317-.159.69-.159 1.006 0l4.994 2.497c.317.158.69.158 1.006 0Z"
-                    ></path>
-                  </svg>
-                  <span class="side-menu__label">Events & Trainings</span>
-                  <i class="ri-arrow-down-s-line side-menu__angle"></i>
-                </a>
-                <ul class="slide-menu child1">
-                  <li class="slide">
-                    <a href="./manage-events.html" class="side-menu__item"
-                      >View All Events</a
-                    >
-                  </li>
-                  <li class="slide">
-                    <a href="./add-event.html" class="side-menu__item"
-                      >Add New Event</a
-                    >
-                  </li>
-                </ul>
-              </li>
-              <!-- End::slide -->
+
 
               <!-- Start::slide -->
               <li class="slide has-sub">
@@ -664,6 +666,8 @@
     "/acc/edit-accolades": ".accolade-menu",
     "/cl/manage-classifications": ".classification-menu",
     "/cl/add-classification": ".classification-menu",
+    "/e/manage-events": ".events-menu",
+    "/e/add-event": ".events-menu",
   };
 
   // Mark the active menu and open its dropdown
