Add accolades - new fileds related to sir

--- a/public/view/m-accolade/edit-accolades.ejs
+++ b/public/view/m-accolade/edit-accolades.ejs
@@ -188,6 +188,36 @@
                         />
                       </div>
                       <div class="col-xl-6">
+                        <label for="item_type" class="form-label">Item Type</label>
+                        <select class="form-control" name="item_type" id="item_type">
+                          <option value="">Select</option>
+                          <option value="Pin">Pin</option>
+                          <option value="Ribbon">Ribbon</option>
+                          <option value="Kit">Kit</option>
+                        </select>
+                      </div>
+                      <div class="col-xl-6">
+                        <label for="accolade_type" class="form-label">Accolade Type</label>
+                        <select class="form-control" name="accolade_type" id="accolade_type">
+                          <option value="">Select</option>
+                          <option value="Regional">Regional</option>
+                          <option value="India">India</option>
+                          <option value="Global">Global</option>
+                        </select>
+                      </div>
+                      <div class="col-xl-6">
+                        <label for="ec" class="form-label"
+                          >Eligibility & Condition</label
+                        >
+                        <textarea
+                          class="form-control"
+                          id="ec"
+                          name="ec"
+                          placeholder="Enter the region's mission"
+                          rows="3"
+                        ></textarea>
+                      </div>
+                      <div class="col-xl-6">
                         <label for="stock_availability" class="form-label">Availability</b></label>
                         <select class="form-control" name="stock_availability" id="stock_availability">
                             <option value="">Select</option>
