--- a/public/view/m-accolade/manage-accolades.ejs
+++ b/public/view/m-accolade/manage-accolades.ejs
@@ -85,6 +85,8 @@
                     
                       <th scope="col">Stock Available</th>
                       <th scope="col">Stock In Date</th>
+                      <th scope="col">Item Type</th>
+                      <th scope="col">Accolade Type</th>
                       <th scope="col">Availability</th>
                       <th scope="col">Status</th>
                       <th scope="col">Actions</th>
